--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -83,15 +83,16 @@
                         <p style="text-align:justify"><b>EVERYONE PARTICIPATING IN THE COMPETITION SHOULD READ AND UNDERSTAND ALL THE RULES OF THE COMPETITION.</p></b>
 						<p style="text-align:justify">
 						<li>Competitors must submit their design online on or before the due date.</li>
-						<li>Participants must only submit a video from videos given in our web page</li>
 						<li><b>The relevent images for dubbing Milestone - 1 will be available soon.</b></li>
+						<li>As the first step, an image is given in order to measure the creativity of the contestant.</li>
+						<li>As the second step, voice should be added to any of the given videos.</li>
+						<li>Any video from the given videos can be selected.</li>
+						<li>Participants must only submit a video from videos given in our web page</li>
 						<li>The videos given can't be edited or cannot be altered in any way.</li>
-						<li>Only one design can be submitted per team.</li>
-						<li>Candidates can apply individually or in groups, with a maximum of five members per group.</li>
+						<li>A video without voice, a video with voice, and a script is given in each section.</li>
+						<li>The contestant should only dub the highlighted part in the script.</li>
 						<li>Political mudslinging should eliminate racist discourse. if such dialogue videos are included, they will be removed from the competition.</li>
 						<li>Do not use obscene words. if such dialogue videos are included, they will be removed from the competition.</li>
-						<li>Uploaded video size should be less than 500MB.</li>
-						<li>Videos should be presented in MP4 format. You can use any frame size except 1920*1080.</li>
 						<li>All submitted videos should not have any kind of logo, copyright marks, identifying marks, borders or any other type of markers.</li>
 						<li>The competition consists of two categories: the most creative and the most popular design.</li>
 						<li>The most creative videos will be selected by the jury and the 10 best creative videos will be posted on our Facebook page and the most popular creation will be selected by Facebook likes.</li>
@@ -101,9 +102,8 @@
 							&emsp;&emsp;Voice adjustment and control according to the character.</br>
 							&emsp;&emsp;Flow in video and dialogues.</br>
 							&emsp;&emsp;The meaning and harmony of the dialogues in the video will be considered.</li>
-						<li>Final design should be uploaded as single zip (.rar) file.</li>
+						<li> Finally, a zip/rar document should be created, renamed as the registration number given, and the dubbed video and the script created should be inserted.</li>
 						<li>Before uploading you need to register through our website <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> and get a registration number. There you will be notified via e-mail.(Please check your spam folder if you haven't received your registration number within 24 hours.)</li>
-						<li>The zip file should be re-registered with the registration number.</li>
 						<li>Only this file should be uploaded through the Google forum provided on the website. </li> 
 
 						</p>
@@ -129,14 +129,14 @@
     </div>
 	
 	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-         Videos will be available soon. 
+        First step of the competition will be available soon. When submitting, you need to submit both the first and the second step.
          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
          </button>
       </div>
 <!-- comment end-->
 
-<!-- uncomment start
+<!-- uncomment start-->
 	<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
         <h2 class="section-title py-5">MILESTONE - 02</h2>
         <div class="row justify-content-center">
@@ -311,7 +311,7 @@
 			
         </div>
     </div>
-uncomment end-->
+<!--uncomment end-->
 
 
 
@@ -347,15 +347,15 @@ uncomment end-->
                     </div>
                 </div>
             </div>
-			<!--<div class="col-md-4 my-3 my-md-0">
+			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Mr. Saranga</h3>
+                        <h3 class="testmonial-title">Mrs. Achinthya Amarakoon</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div>
     </div>
     <!-- CONTACT Section  -->
