--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -83,15 +83,15 @@
                         <p style="text-align:justify"><b>තරඟයට සහබාගී වන සියළු තරඟකරුවන් තරඟ නීති රීති සියල්ල හොඳින් කියවා අවබෝධ කරගත යුතුය.</p></b>
 						<p style="text-align:justify">
 						<li>තරඟකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
-						<li>හඩ කැවීමේ තරඟකරුවන් අප වෙබ් පිටුවේ ඇති වීඩියෝ පඨයකට පමණක් හඩ කැවිය යුතුය.</li>
-						<li>විඩියෝ පඨයන් සංස්කරණය හෝ වෙනස්කම් වලට ලක් කිරීම නොකල යුතුය.</li>
-						<li><b>දෙවන Milestone සදහා අදාල ඡායාරූප අපගේ වෙබ් පිටුවේ ඉතා ඉක්මනින් පළවනු ඇත.</b></li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත් කළ හැකිවන්නෙ එක නිර්මාණයක් පමණි.</li>
-						<li>එක් කණ්ඩායමකට සහභාගි වියහැකි උපරිම සාමාජිකයන් ගණන 5 කි.</li>
+						<li>පළමු පියවර වශයෙන්, තරඟකරුගේ නිර්මාණාත්මක බව මැනීමට ජායාරූපය දෙනු ලැබේ .<b>(Available soon.)</b></li>
+						<li>දෙවන පියවර වශයෙන්, දෙන ලද වීඩියෝ පඨයන්ගෙන් එකකට හඩ කැවිය යුතුයි.</li>
+						<li>දෙන ලද වීඩියෝ පඨ වලින්, තම අභිමතය පරිදි වීඩියෝ පඨයක් තෝරාගත හැක.</li>
+						<li>අපගේ වෙබ් පිටුවේ ඇති වීඩියෝවක් පමණක්  හඩකවා ඉදිරිපත් කල යුතුයි.</li>
+						<li>එම වීඩියෝ පඨයන්  සංස්කරණය හෝ කිසිදු ආකාරයක වෙනස්කම් වලට ලක් නොකල යුතුයි.</li>
+						<li>හඩ සහිත වීඩියෝ පඨයක්, එම වීඩියෝ පඨයට අදාළ හඩ රහිත වීඩියෝ පඨයක් සහ දෙබස් ඇතුලත් පිටපත ලෙස වෙන වෙනම ලබා දී ඇත.</li>
+						<li>තරඟකරුවන් වීඩියෝ පඨයෙහි හයිලයිට් කරන ලද කොටස පමණක් හඩ කැවිය යුතුය.</li>
 						<li>දේශපාලනික මඩගැසීම්, ජාතිවාදී දෙබස් නැති වියයුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
 						<li>අසභ්‍ය වචන ආදිය ඇතිළත් දෙබස් වීඩියෝ තුළ භාවිතා නොකළ යුතුය. එවැනි දෙබස් ඇතුළත් වේනම් තරඟයෙන් ඉවත් කරනු ලැබේ.</li>
-						<li>Upload කරනු ලබන වීඩියෝ පටය 500mb ට වඩා කුඩා වියයුතුය.</li>
-						<li>වීඩියෝ පටය mp4 ආකාරයෙන් ඉදිරිපත් කළයුතුය. 1920*1080 හැර කැමති frame size එකක් භාවිතා කළහැක.</li>
 						<li>ඉදිරිපත් කරනු ලබන සියළුම වීඩියෝ පට තුළ කිසිදු ආකාරයේ ලාංජන(Logo), කතෘ අයිතිය සම්බන්ධ සලකුණු(Copyright marks), අනන්‍යතාවය හඟවන සලකුණු(Identifying marks), මායම්(Borders) හෝ වෙනත් කිසිදු ආකාරයේ සලකුණු නොතිබිය යුතුය.</li>
 						<li>නිර්මාණාත්මකම හා ජනප්‍රියතම නිර්මාණ ලෙස තරග කාණ්ඩ දෙකකින් තරඟය සමන්විත වේ.</li>
 						<li>නිර්මාණාත්මකම වීඩියෝ පටයන් විනිශ්චය මණ්ඩලය මගින් තෝරාදෙන අතර ඉන් හොඳම නිර්මාණාත්මක වීඩියෝ පට 10 අපගේ Facebook පිටුවෙහි පල කරනු අතර ඉන් ජනප්‍රියතම නිර්මාණය Facebook මනාප (Facebook likes) මගින් තෝරාගනු ලැබේ. </li>
@@ -101,9 +101,8 @@
                                 &emsp;&emsp;චරිතයට අනුව හඬ කැවීම සහ පාලනය</br>
                                 &emsp;&emsp;වීඩියෝ පටයේ දෙබස් වල ගලායාම</br>
                                 &emsp;&emsp;වීඩියෝ පටයේ දෙබස් වල අර්ථවත් බව සහ සුසං‍යෝගය සලකා බලයි.</li> 
-                        <li>අවසන් නිර්මාණ තනි zip/rar ගොනුවක් ලෙස උඩුගත කළයුතුය.</li>
-						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය.(පැය 24 ක් තුල ලියාපදිංචි අංකයක් නොලැබුනේනම් ඹබේ spam folder පරීක්ෂාකර බලන්න.)</li>
-						<li>zip ගොනුව ලියාපදිංචි අංකය නමින් නම්(Rename) වියයුතුය</li>
+                        <li>අවසානයට zip/rar ගොනුවක් සකස් කර, දෙන ලද  ලියාපදිංචි අංකය යොදා Rename කර හඩකැවූ වීඩියෝව හා පිටපත ඇතුලත් කල යුතුයි.</li>
+						<li>උඩුගත කිරීමට ප්‍රථම අපගේ වෙබ් අඩවිය <a href="https://ruusara.github.io/ruusara/">https://ruusara.github.io/ruusara/</a> හරහා ලියාපදිංචි වී ලියාපදිංචි අංකයක් ලබාගතයුතුය. එය ඊ-මේල් මගින් ඔබට දැනුම් දෙනු ලැබේ.(පැය 24 ක් තුල ලියාපදිංචි අංකයක් නොලැබුනේනම් ඹබේ spam folder පරීක්ෂාකර බලන්න.)</li>
 						<li>වෙබ් අඩවියේ ඇති ගූගල් පෝරමය හරහා zip  ගොනුව පමණක් උඩුගත කළයුතුය.</li>
 						</p>
                     </div>
@@ -126,7 +125,7 @@
     </div>
 	
 	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-         Videos will be available soon.
+        First step of the competition will be available soon. When submitting, you need to submit both the first and the second step.
          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
          </button>
@@ -134,9 +133,9 @@
 <!-- comment end-->
 
 
-<!-- uncomment start
+<!-- uncomment start-->
 	<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">MILESTONE - 01</h2>
+        <h2 class="section-title py-5">MILESTONE - 02</h2>
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-4 mb-5">
                 <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
@@ -309,7 +308,7 @@
 			
         </div>
     </div>
-uncomment end-->
+<!--uncomment end-->
 
 
 
@@ -348,15 +347,15 @@ uncomment end-->
                     </div>
                 </div>
             </div>
-			<!--<div class="col-md-4 my-3 my-md-0">
+			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">සාරංග මහතා</h3>
+                        <h3 class="testmonial-title">අචින්ත්‍යා අමරකෝන් මහත්මිය</h3>
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
-			</div>-->
+			</div>
         </div>
     </div>
     <!-- CONTACT Section  -->
