--- a/indexsin.html
+++ b/indexsin.html
@@ -279,15 +279,15 @@
                     </div>
                 </div>
             </div>
-			<!--<div class="col-md-4 my-3 my-md-0">
+			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">සාරංග මහතා</h3>
+                        <h3 class="testmonial-title">අචින්ත්‍යා අමරකෝන් මහත්මිය</h3>
 						<h6 class="testmonial-subtitle">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරඟය</h6>
                     </div>
                 </div>
-			</div>-->
+			</div>
         </div>
     </div>
 
