--- a/indexeng.html
+++ b/indexeng.html
@@ -279,15 +279,15 @@
                     </div>
                 </div>
             </div>
-			<!--<div class="col-md-4 my-3 my-md-0">
+			<div class="col-md-4 my-3 my-md-0">
                 <div class="testmonial-card">
 					<img src="assets/imgs/judge4.jpg" style = "width:75%">
                     <div class="testmonial-body">
-                        <h3 class="testmonial-title">Mr. Saranga</h3>
+                        <h3 class="testmonial-title">Mrs. Achinthya Amarakoon</h3>
 						<h6 class="testmonial-subtitle">Comic Character Creation Competition</h6>
                     </div>
                 </div>
-            </div>-->
+            </div>
         </div>
     </div>
 
