--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -88,7 +88,7 @@
 						<li>The relevant character should have an identity. A name and a small description of the character is needed.</li>
 						<li>If there's a background design, it should be designed so as not to interfere with the portrayal of the character.</li>
 						<li>Here, we do not impose any restrictions on the software you use to create your work, and you are free to work with any software.</li>
-						<li>You can submit your designs in JPEG or PNG format. Design resolution should be greater than 960px, 1280px and it should be less than 20MB in size.</li>
+						<li>You can submit your designs in JPEG or PNG format. Design resolution should be greater than <b>960 x 1280px </b>and it should be less than <b>20MB </b>in size.</li>
 						<li>You should be able to provide the source file of your design, or the screenshot taken during your creation if they are needed in any case.</li>
 						<li>The design you submitted must be of your own and if it is found to be traced, or if it is found to be another person's design, it will be excluded from the competition.</li>
 						<li>Any creation that is harmful to politics come on religiosity and society will not be accepted and will be removed from the competition.</li>
