--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -83,8 +83,9 @@
                         <p style="text-align:justify"><b>EVERYONE PARTICIPATING IN THE COMPETITION SHOULD READ AND UNDERSTAND ALL THE RULES OF THE COMPETITION.</p></b>
 						<p style="text-align:justify">
 						<li>Competitors must submit their design online on or before the due date.</li>
-						<li><b>The relevent images for dubbing Milestone - 1 will be available soon.</b></li>
-						<li>As the first step, an image is given in order to measure the creativity of the contestant.</li>
+						<li>As the first step,the contestant must refer to the video and the script given and should dub to all the characters alone. </li>
+                        <li>The relevant video should be submitted there after.</li>
+                        <li>There by the best 08 girls and 08 boys are selected for milestone 2</li>
 						<li>As the second step, voice should be added to any of the given videos.</li>
 						<li>Any video from the given videos can be selected.</li>
 						<li>Participants must only submit a video from videos given in our web page</li>
@@ -124,19 +125,36 @@
 
 
 <!-- Comment start-->	
-	  <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">MILESTONE - 01</h2>
-    </div>
-	
-	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-        First step of the competition will be available soon. When submitting, you need to submit both the first and the second step.
-         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-         </button>
-      </div>
+<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
+    <h2 class="section-title py-5">MILESTONE - 01</h2>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="epi8" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card bg-transparent border my-3 my-md-0">
+                        <video controls>
+                        <source src = 'assets\vedio\Walas_pancha_English.mp4' type='video/mp4'>
+                            Your Browser does not support the video tag.
+                        </video>
+                        <div class="card-body">
+                            <h4 class="pt20 pb20">Walas Pancha</h4>
+                            <a href='assets\vedio\Walas_pancha_English.mp4' download='Walas_pancha_English'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card bg-transparent border my-3 my-md-0">
+                        <img src="assets/imgs/dubscriptm1.jpg" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
+                        <div class="card-body">
+                            <a href='assets\imgs\dubscriptm1.jpg' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 <!-- comment end-->
 
-<!-- uncomment start-->
+<!-- uncomment start
 	<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
         <h2 class="section-title py-5">MILESTONE - 02</h2>
         <div class="row justify-content-center">
@@ -311,7 +329,7 @@
 			
         </div>
     </div>
-<!--uncomment end-->
+uncomment end-->
 
 
 
