--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -120,20 +120,37 @@
 
 
 <!-- comment start -->
-  <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">MILESTONE - 01</h2>
-    </div>
-	
-	<div class="alert alert-primary alert-dismissible fade show" role="alert" style='margin:0 5% 0 5%;text-align:center'>
-        First step of the competition will be available soon. When submitting, you need to submit both the first and the second step.
-         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-         </button>
-      </div>
+<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
+    <h2 class="section-title py-5">MILESTONE - 01</h2>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="epi8" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card bg-transparent border my-3 my-md-0">
+                        <video controls>
+                        <source src = 'assets\vedio\Walas_pancha_English.mp4' type='video/mp4'>
+                            Your Browser does not support the video tag.
+                        </video>
+                        <div class="card-body">
+                            <h4 class="pt20 pb20">Walas Pancha</h4>
+                            <a href='assets\vedio\Walas_pancha_English.mp4' download='Walas_pancha_English'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card bg-transparent border my-3 my-md-0">
+                        <img src="assets/imgs/dubscriptm1.jpg" class="rounded-0 card-img-top mg-responsive" style="padding:0.5em 0.5em 0 0.5em">
+                        <div class="card-body">
+                            <a href='assets\imgs\dubscriptm1.jpg' download='හඬකැවීම් පුහුණුව සඳහා පිටපත් (Scripts)'><button class="btn btn-primary rounded">Download <i class="ti-download"></i></button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 <!-- comment end-->
 
 
-<!-- uncomment start-->
+<!-- uncomment start
 	<div id="blog" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
         <h2 class="section-title py-5">MILESTONE - 02</h2>
         <div class="row justify-content-center">
@@ -308,7 +325,7 @@
 			
         </div>
     </div>
-<!--uncomment end-->
+uncomment end-->
 
 
 
