--- a/dubbingsin.html
+++ b/dubbingsin.html
@@ -83,7 +83,7 @@
                         <p style="text-align:justify"><b>තරඟයට සහබාගී වන සියළු තරඟකරුවන් තරඟ නීති රීති සියල්ල හොඳින් කියවා අවබෝධ කරගත යුතුය.</p></b>
 						<p style="text-align:justify">
 						<li>තරඟකරුවන් තම නිර්මාණ නියමිත දිනට පෙර මාර්ගගත ක්‍රමයට ලියාපදිංචි වියයුතුය.</li>
-						<li>පළමු පියවර වශයෙන්, තරඟකරුගේ නිර්මාණාත්මක බව මැනීමට ජායාරූපය දෙනු ලැබේ .<b>(Available soon.)</b></li>
+						<li>ලබාදී ඇති කෙටි ඉංග්‍රීසි බසින් යුත් කාටූන් පටය එවා ඇති පිටපත සමග සසඳා බලා තනිව සියලු චරිත රඟපා අප වෙත යොමුකරන්න.</li>
 						<li>දෙවන පියවර වශයෙන්, දෙන ලද වීඩියෝ පඨයන්ගෙන් එකකට හඩ කැවිය යුතුයි.</li>
 						<li>දෙන ලද වීඩියෝ පඨ වලින්, තම අභිමතය පරිදි වීඩියෝ පඨයක් තෝරාගත හැක.</li>
 						<li>අපගේ වෙබ් පිටුවේ ඇති වීඩියෝවක් පමණක්  හඩකවා ඉදිරිපත් කල යුතුයි.</li>
