--- a/gallaryeng.html
+++ b/gallaryeng.html
@@ -304,8 +304,8 @@
                 <p>“Let my country be awake”, The Students’ Festival of Literature - 2022 </br> Peradeniya Students’ Union, Literary Subcommittee of University of Peradeniya, University of Peradeniya</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (Kalindu) ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (Shanuka) </p>
+                    <p><span class="ti-support pr-3"></span> (94)76 903 3905 (Kasthuri)</p>
+					<p><span class="ti-support pr-3"></span> (94)71 130 8738 (Hashini)</p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
@@ -321,8 +321,8 @@
             </div>
             <div class="col-sm-4">
                 <h3>CALL US</h3>
-                <P class="text-muted"><i class = "ti-support"> (94)70 136 7886</i></P>
-				<P class="text-muted"><i class = "ti-support"> (94)76 666 5859</i></P>
+                <P class="text-muted"><i class = "ti-support"> (94)76 903 3905</i></P>
+				<P class="text-muted"><i class = "ti-support"> (94)71 130 8738</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>FIND US</h3>
