--- a/comiccharactersin.html
+++ b/comiccharactersin.html
@@ -169,8 +169,8 @@
                 <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙණිය විශ්ව විද්‍යාලය</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිඳු ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
+                    <p><span class="ti-support pr-3"></span> (94)76 903 3905 (Kasthuri)</p>
+					<p><span class="ti-support pr-3"></span> (94)71 130 8738 (Hashini)</p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
@@ -186,8 +186,8 @@
             </div>
             <div class="col-sm-4">
                 <h3>CALL US</h3>
-                <P class="text-muted"><i class = "ti-support"> (94)70 136 7886</i></P>
-				<P class="text-muted"><i class = "ti-support"> (94)76 666 5859</i></P>
+                <P class="text-muted"><i class = "ti-support"> (94)76 903 3905</i></P>
+				<P class="text-muted"><i class = "ti-support"> (94)71 130 8738</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>FIND US</h3>
