--- a/indexsin.html
+++ b/indexsin.html
@@ -284,12 +284,12 @@
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
-				<!--<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" class="gallary-img">
+				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+					<img src="assets/imgs/scocial-7.jpg" class="gallary-img">
 					<a href="#" class="gallary-overlay">
 						<i class="gallary-icon "></i>
 					</a>
-				</div>-->
+				</div>
 			</div>
         </div>
     </div>
