--- a/gallarysin.html
+++ b/gallarysin.html
@@ -288,6 +288,12 @@
 						<i class="gallary-icon "></i>
 					</a>
 				</div>
+				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
+					<img src="assets/imgs/scocial-7.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
+					<a href="#" class="gallary-overlay">
+						<i class="gallary-icon "></i>
+					</a>
+				</div>
 			</div>
         </div>
     </div>
